@@ -2,14 +2,8 @@ package com.awakenedredstone.autowhitelist.discord.api;
 
 import net.dv8tion.jda.api.requests.GatewayIntent;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class GatewayIntents {
-    public static final List<GatewayIntent> BASIC = Arrays.asList(
-        GatewayIntent.GUILD_MEMBERS,
-        GatewayIntent.GUILD_MESSAGES,
-        GatewayIntent.DIRECT_MESSAGES,
-        GatewayIntent.MESSAGE_CONTENT
-    );
+    public static final List<GatewayIntent> BASIC = List.of(GatewayIntent.GUILD_MEMBERS);
 }
